[gd_scene load_steps=10 format=3 uid="uid://nf2nvpmvrvxq"]

[ext_resource type="Environment" uid="uid://kttecvt1ttwi" path="res://assets/entities/GameEnv.res" id="1_18v6k"]
[ext_resource type="Script" path="res://src/UI/main_menu.gd" id="1_t37qf"]
[ext_resource type="PackedScene" uid="uid://fnrm7mqen0yl" path="res://assets/levels/house_without_player.tscn" id="3_cqexw"]
[ext_resource type="Texture2D" uid="uid://b57yoiv4y7jp6" path="res://assets/sprites/success_text.png" id="3_exhi8"]
[ext_resource type="Texture2D" uid="uid://bc2turm7kwckt" path="res://assets/sprites/prison_bars.png" id="4_1gv6i"]
[ext_resource type="Texture2D" uid="uid://7jtyym2eypbw" path="res://assets/sprites/failed_text.png" id="5_6i07u"]

[sub_resource type="LabelSettings" id="LabelSettings_kuohv"]
font_size = 36

[sub_resource type="LabelSettings" id="LabelSettings_nkduv"]
font_size = 30
outline_color = Color(0, 0, 0, 1)
shadow_size = 3
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(-1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_8lit7"]
font_size = 30
outline_size = 20
outline_color = Color(0, 0, 0, 1)

[node name="MainMenu" type="Node3D"]

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.73038, -0.25, 0.635646, 0.00623598, 0.933013, 0.359789, -0.683013, -0.258819, 0.683013, 6.1, 1.3, -7)
environment = ExtResource("1_18v6k")

[node name="MainMenu" type="Control" parent="Camera3D"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t37qf")

[node name="Options" type="TabContainer" parent="Camera3D/MainMenu"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -225.0
offset_top = -175.0
offset_right = 225.0
offset_bottom = 175.0
grow_horizontal = 2
grow_vertical = 2
tab_alignment = 1

[node name="Options" type="Label" parent="Camera3D/MainMenu/Options"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Camera3D/MainMenu/Options/Options"]
custom_minimum_size = Vector2(450, 320)
layout_mode = 0
offset_right = 450.0
offset_bottom = 320.0

[node name="Buttons" type="Control" parent="Camera3D/MainMenu/Options/Options/ScrollContainer"]
custom_minimum_size = Vector2(450, 350)
layout_mode = 2

[node name="HeadBob" type="CheckButton" parent="Camera3D/MainMenu/Options/Options/ScrollContainer/Buttons"]
layout_mode = 0
offset_left = 286.0
offset_top = 44.0
offset_right = 405.0
offset_bottom = 75.0
button_pressed = true
text = "HeadBob"

[node name="ComingSoon" type="Label" parent="Camera3D/MainMenu/Options/Options/ScrollContainer/Buttons"]
layout_mode = 0
offset_left = 62.0
offset_top = 146.0
offset_right = 396.0
offset_bottom = 196.0
text = "More is Comming :)"
label_settings = SubResource("LabelSettings_kuohv")

[node name="Close" type="Button" parent="Camera3D/MainMenu/Options/Options/ScrollContainer/Buttons"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -43.0
offset_top = -40.69
offset_right = 43.0
offset_bottom = -9.69
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 4
text = "Close"

[node name="SuccessMenu" type="Control" parent="Camera3D/MainMenu"]
visible = false
custom_minimum_size = Vector2(270, 250)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -135.0
offset_top = -170.0
offset_right = 135.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Camera3D/MainMenu/SuccessMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.207843, 0.207843, 0.207843, 1)

[node name="Success" type="TextureRect" parent="Camera3D/MainMenu/SuccessMenu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 39.0
offset_right = 101.0
offset_bottom = 85.0
grow_horizontal = 2
texture = ExtResource("3_exhi8")
expand_mode = 1

[node name="SucessClose" type="Button" parent="Camera3D/MainMenu/SuccessMenu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -40.0
offset_top = 180.0
offset_right = 40.0
offset_bottom = 214.0
grow_horizontal = 2
text = "Close"

[node name="Score" type="Label" parent="Camera3D/MainMenu/SuccessMenu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -115.0
offset_top = 116.0
offset_right = 116.0
offset_bottom = 158.0
grow_horizontal = 2
text = "SCORE: 1234567"
label_settings = SubResource("LabelSettings_nkduv")

[node name="FailMenu" type="Control" parent="Camera3D/MainMenu"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Camera3D/MainMenu/FailMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.215686, 0.215686, 0.215686, 0.921569)

[node name="TextureRect" type="TextureRect" parent="Camera3D/MainMenu/FailMenu"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("4_1gv6i")

[node name="TextureRect2" type="TextureRect" parent="Camera3D/MainMenu/FailMenu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -253.0
offset_top = 200.0
offset_right = 253.0
offset_bottom = 319.0
grow_horizontal = 2
texture = ExtResource("5_6i07u")

[node name="FailClose" type="Button" parent="Camera3D/MainMenu/FailMenu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -75.0
offset_top = 406.0
offset_right = 75.0
offset_bottom = 463.0
grow_horizontal = 2
text = "Close"

[node name="MainMenu" type="PanelContainer" parent="Camera3D/MainMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -198.0
offset_top = -148.0
offset_right = 198.0
offset_bottom = 207.0
grow_horizontal = 2
grow_vertical = 2

[node name="Buttons" type="Control" parent="Camera3D/MainMenu/MainMenu"]
layout_mode = 2

[node name="Start" type="Button" parent="Camera3D/MainMenu/MainMenu/Buttons"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -73.0
offset_top = -69.5
offset_right = 74.0
offset_bottom = -26.5
grow_horizontal = 2
grow_vertical = 2
text = "Start"

[node name="Options" type="Button" parent="Camera3D/MainMenu/MainMenu/Buttons"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -86.0
offset_top = -15.5
offset_right = 85.0
offset_bottom = 26.5
grow_horizontal = 2
grow_vertical = 2
text = "Options
"

[node name="ExitGame" type="Button" parent="Camera3D/MainMenu/MainMenu/Buttons"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -65.0
offset_top = 36.5
offset_right = 65.0
offset_bottom = 77.5
grow_horizontal = 2
grow_vertical = 2
text = "Exit "

[node name="Label" type="Label" parent="Camera3D/MainMenu/MainMenu/Buttons"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -90.0
offset_top = 15.0
offset_right = 90.0
offset_bottom = 57.0
grow_horizontal = 2
text = "Underground Operations"
label_settings = SubResource("LabelSettings_8lit7")

[node name="Node3D" parent="." instance=ExtResource("3_cqexw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.1, -1.15, 0)
script = null

[connection signal="toggled" from="Camera3D/MainMenu/Options/Options/ScrollContainer/Buttons/HeadBob" to="Camera3D/MainMenu" method="_on_head_bob_toggled"]
[connection signal="pressed" from="Camera3D/MainMenu/Options/Options/ScrollContainer/Buttons/Close" to="Camera3D/MainMenu" method="_on_close_pressed"]
[connection signal="pressed" from="Camera3D/MainMenu/SuccessMenu/SucessClose" to="Camera3D/MainMenu" method="_on_sucess_close_pressed"]
[connection signal="pressed" from="Camera3D/MainMenu/FailMenu/FailClose" to="Camera3D/MainMenu" method="_on_fail_close_pressed"]
[connection signal="pressed" from="Camera3D/MainMenu/MainMenu/Buttons/Start" to="Camera3D/MainMenu" method="_on_start_pressed"]
[connection signal="pressed" from="Camera3D/MainMenu/MainMenu/Buttons/Options" to="Camera3D/MainMenu" method="_on_options_pressed"]
[connection signal="pressed" from="Camera3D/MainMenu/MainMenu/Buttons/ExitGame" to="Camera3D/MainMenu" method="_on_exit_game_pressed"]
